--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,4 @@
+/* To be updated with the gems used on it and the details on everything wrong with it */
 == README
 
 This README would normally document whatever steps are necessary to get the
